[package]
name = "remote-ssl-renewal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
base64 = "0.13.1"
clap = { version = "4.0.26", features = ["derive"] }
color-eyre = "0.6.2"
config = "0.13.2"
deadpool-sqlite = "0.5.0"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
dirs = "4.0.0"
eyre = "0.6.8"
futures = "0.3.25"
indicatif = "0.17.2"
instant-acme = "0.1.1"
log = "0.4.17"
rcgen = "0.10.0"
reqwest = { version = "0.11.13", features = ["json"] }
rusqlite = "0.28.0"
rusqlite_migration = "1.0.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
time = "0.3.17"
tokio = { version = "1.22.0", features = ["rt", "parking_lot", "macros"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
x509-parser = "0.14.0"
